<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/model_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/image_guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".25" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_guide_line"
            app:layout_constraintHeight_percent=".4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".1"
            app:srcCompat="@mipmap/ic_launcher" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_guide_line"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/age_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/age"
            android:textColor="@color/ash"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_guide_line"
            app:layout_constraintTop_toBottomOf="@id/name_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/height_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/height"
            android:textColor="@color/ash"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_guide_line"
            app:layout_constraintTop_toBottomOf="@id/age_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jersey_number_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/jersey_number"
            android:textColor="@color/ash"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_guide_line"
            app:layout_constraintTop_toBottomOf="@id/height_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/position_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/position"
            android:textColor="@color/ash"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_guide_line"
            app:layout_constraintTop_toBottomOf="@id/jersey_number_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/national_team_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/national_team"
            android:textColor="@color/ash"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_guide_line"
            app:layout_constraintTop_toBottomOf="@id/position_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/club_team_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/club_team"
            android:textColor="@color/ash"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_guide_line"
            app:layout_constraintTop_toBottomOf="@id/national_team_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/country_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/country"
            android:textColor="@color/ash"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_guide_line"
            app:layout_constraintTop_toBottomOf="@id/club_team_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>